docs: 로그인한 유저의 정보 조회 swagger api 이동
